# adaptive-knowledge-graph

./: .dockerignore  .env.demo  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  DEMO_PLAN.md  DEMO_READY_SUMMARY.md  LICENSE  Makefile  PHASE1_VERIFICATION.md  PR_REVIEW_GAP_ANALYSIS.md  README.md  ROADMAP_2026.md  TESTING.md  TRIBUNAL_ANGEL_ARGUMENTS.md  TRIBUNAL_DEVIL_ARGUMENTS.md  TRIBUNAL_PROSECUTION_CHARGES.md  TRIBUNAL_VERDICT.md  TRIBUNAL_WITNESS_REPORT.md  WOW_EFFECT_ROADMAP.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/api/routes/: __init__.py  ask.py  graph.py  learning_path.py  quiz.py  subjects.py
backend/app/core/: auth.py  exceptions.py  logging.py  middleware.py  rate_limit.py  settings.py  subjects.py
backend/app/kg/: __init__.py  builder.py  cypher_qa.py  neo4j_adapter.py  schema.py
backend/app/nlp/: __init__.py  concept_extractor.py  embeddings.py  llm_client.py
backend/app/rag/: __init__.py  chunker.py  kg_expansion.py  reranker.py  retriever.py  unified_retriever.py  window_retriever.py
backend/app/student/: models.py  quiz_generator.py  recommendation_service.py  student_service.py
backend/app/ui_payloads/: quiz.py  recommendations.py
backend/tests/: conftest.py  test_api_ask.py  test_api_graph.py  test_api_quiz.py  test_docker.py  test_kg_expansion.py  test_llm_client.py  test_logging.py  test_main.py  test_makefile.py  test_neo4j_adapter.py  test_poetry.py  test_quiz_generator.py  test_recommendation_service.py  test_reranker.py  test_retriever.py  test_settings.py  test_streaming.py  test_student_service.py  test_tribunal_prosecution.py
config/: subjects.yaml
data/processed/: books.jsonl  books_economics.jsonl  books_us_history.jsonl  knowledge_graph.json  knowledge_graph_economics.json  knowledge_graph_us_history.json  student_profiles.json
demo-slides/: index.html
docs/: ARCHITECTURE.md  DEMO_5MIN.md  DEMO_PLAYBOOK.md
frontend/: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  TESTING_CHECKLIST.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/assessment/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/comparison/: page.tsx
frontend/app/graph/: page.tsx
frontend/components/: ErrorBoundary.tsx  KnowledgeGraph.tsx  LearningPath.tsx  MasteryIndicator.tsx  PostQuizRecommendations.tsx  Providers.tsx  Quiz.tsx  Skeleton.tsx  SubjectPicker.tsx
frontend/lib/: api-client.ts  store.ts  types.ts
frontend/tests/e2e/: chat.spec.ts  comparison.spec.ts  graph.spec.ts  home.spec.ts
frontend/tests/integration/: assessment.integration.spec.ts  chat.integration.spec.ts  comparison.integration.spec.ts  global-setup.ts  graph.integration.spec.ts  helpers.ts  home.integration.spec.ts  subject-switching.spec.ts
frontend/tests/unit/: AssessmentPage.test.tsx  ChatPage.test.tsx  ErrorBoundary.test.tsx  GraphPage.test.tsx  HomePage.test.tsx  KnowledgeGraph.test.tsx  LearningPath.test.tsx  MasteryIndicator.test.tsx  Quiz.test.tsx  SubjectPicker.test.tsx  api-client.test.ts  store.test.ts
frontend/types/: cytoscape-cose-bilkent.d.ts  cytoscape.d.ts
infra/compose/: README.md  compose.yaml
infra/docker/: api.cpu.Dockerfile  api.gpu.Dockerfile
scripts/: __init__.py  build_knowledge_graph.py  create_neo4j_indexes.py  debug_scrape.py  fetch_openstax.py  index_to_opensearch.py  index_to_qdrant.py  ingest_books.py  ingest_us_history.py  migrate_to_enterprise.py  migrate_to_multisubject.py  normalize_book.py  parse_sections.py  run_pipeline.sh  seed_demo.sh  seed_student_profile.py  test_quiz_gen.py  validate_setup.sh
