[tool.poetry]
name = "adaptive-knowledge-graph"
version = "0.1.0"
description = "PoC Adaptive Knowledge Graph in Education using local LLMs and OpenStax textbooks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# Web framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
python-multipart = "^0.0.9"

# NLP & Embeddings
transformers = "^4.37.0"
sentence-transformers = "^2.3.1"
torch = "^2.1.2"
yake = "^0.4.8"
keybert = "^0.8.4"
nltk = "^3.8.1"
spacy = "^3.7.2"

# Knowledge Graph
neo4j = "^5.16.0"
networkx = "^3.2.1"
rdflib = "^7.0.0"
hdbscan = "^0.8.33"

# Vector DB & Search
qdrant-client = "^1.7.3"

# LLM Integration
outlines = "^0.0.34"
instructor = "^0.5.0"
openai = "^1.10.0"  # For OpenRouter compatibility

# Student Modeling
numpy = "^1.26.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"

# Data Processing
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
markdownify = "^0.11.6"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# Utilities
httpx = "^0.28.1"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Code quality
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

# Type stubs
types-beautifulsoup4 = "^4.12.0"
types-requests = "^2.31.0"
types-toml = "^0.10.8"

# Testing utilities
toml = "^0.10.2"

# Jupyter for evaluation
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"

# Evaluation
ragas = "^0.1.4"

[tool.poetry.group.pyirt]
optional = true

[tool.poetry.group.pyirt.dependencies]
# IRT modeling - optional due to potential conflicts
# Requires Python 3.11 specifically (incompatible with 3.12+)
py-irt = {git = "https://github.com/nd-ball/py-irt.git", python = ">=3.11,<3.12"}

[tool.poetry.group.pybkt]
optional = true

[tool.poetry.group.pybkt.dependencies]
# BKT modeling - optional
# Requires Python 3.11 specifically (incompatible with 3.12+)
pyBKT = {git = "https://github.com/CAHLR/pyBKT.git", python = ">=3.11,<3.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "yake.*",
    "keybert.*",
    "hdbscan.*",
    "qdrant_client.*",
    "outlines.*",
    "instructor.*",
    "ragas.*",
    "neo4j.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=backend/app --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend/app"]
omit = ["*/tests/*", "*/__init__.py"]
